fixtures/runtime/valid/objects/instantiate.php
<?php
class EmptyBox {
}

$box = new EmptyBox();
echo gettype($box), "\n";
